--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "docs:version": "esno ./utils/build-version.ts",
     "docs:vbuild": "vmark && vitepress build",
     "release": "npx release-it",
-    "inspect": "npx node-modules-inspector",
     "changelog": "conventional-changelog -p gitmoji-config -i CHANGELOG.md -s && git add CHANGELOG.md",
     "register:components": "vitepress-rc",
     "pkg:patch": "patch-package",
@@ -43,13 +42,19 @@
     "export-pdf": "press-export-pdf export ./zh-CN/gallery",
     "ncu": "npx npm-check-updates",
     "taze": "npx taze",
-    "deploy": "node ./deploy/index.ts"
+    "deploy": "node ./deploy/index.ts",
+    "check": "esno scripts/check-npm-updates.ts",
+    "check:simple": "esno scripts/simple-check.ts",
+    "check:cli": "esno scripts/check-cli.ts"
   },
   "imports": {
     "#*": "./*"
   },
   "lint-staged": {
     "*": "npm run lint"
+  },
+  "bin": {
+    "npm-update-checker": "./scripts/cli.ts"
   },
   "type": "module",
   "config": {
@@ -73,13 +78,11 @@
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@plugin-web-update-notification/vite": "^2.0.2",
     "@release-it/conventional-changelog": "^10.0.1",
-    "@testing-library/vue": "^8.1.0",
     "@types/element-resize-detector": "^1.1.6",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
     "@types/node": "^24.5.2",
-    "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
     "canvas-confetti": "^1.9.3",
     "code-inspector-plugin": "^1.2.10",
@@ -101,9 +104,6 @@
     "md5": "^2.3.0",
     "mkcert": "^3.2.0",
     "picocolors": "^1.1.1",
-    "postcss": "^8.5.6",
-    "postcss-px-to-viewport": "^1.1.1",
-    "purgecss": "^7.0.2",
     "rolldown-vite": "^7.1.13",
     "sass-embedded": "^1.93.2",
     "sharp": "^0.34.4",
@@ -118,7 +118,6 @@
     "unplugin-version-injector": "^2.1.1",
     "unplugin-vue-components": "^29.1.0",
     "vite-aliases": "^0.11.8",
-    "vite-plugin-alias-import-checker": "^0.1.0",
     "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-compression2": "^2.2.1",
     "vite-plugin-env-parse": "^1.0.15",
@@ -140,9 +139,7 @@
     "vitepress-demo-plugin": "^1.5.0",
     "vitepress-i18n": "^1.3.4",
     "vitepress-markdown-it-stepper": "^0.1.1",
-    "vitepress-plugin-diagrams": "^1.0.0",
     "vitepress-plugin-llms": "^1.7.5",
-    "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-plugin-npm-commands": "^0.8.1",
     "vitepress-plugin-setfrontmatter": "^1.2.3",
@@ -151,7 +148,6 @@
   },
   "dependencies": {
     "@catppuccin/vitepress": "^0.1.2",
-    "@dhlx/delay": "^0.0.5",
     "@faker-js/faker": "^10.0.0",
     "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@iconify-json/carbon": "^1.2.13",
@@ -161,7 +157,6 @@
     "@mermaid-js/layout-elk": "^0.2.0",
     "@mermaid-js/mermaid-zenuml": "^0.2.2",
     "@opentiny/icons": "^0.1.4",
-    "@pinia/plugin-debounce": "^1.0.1",
     "@scqilin/phone-ui-vue": "^0.2.0",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
@@ -169,14 +164,12 @@
     "@vitest/ui": "^3.2.4",
     "@vue-styled-components/core": "^1.13.3",
     "@vue-styled-components/plugin": "^1.0.1",
-    "@vue/test-utils": "^2.4.6",
     "@zumer/snapdom": "^1.9.11",
     "animate.css": "^4.1.1",
     "animejs": "4.1.4",
     "ant-design-vue": "4.2.6",
     "chalk": "^5.6.2",
     "cross-env": "^10.0.0",
-    "crypto": "^1.0.1",
     "dayjs": "^1.11.18",
     "deepmerge-ts": "^7.1.5",
     "default-passive-events": "^4.0.0",
@@ -184,16 +177,12 @@
     "echarts": "^6.0.0",
     "element-resize-detector": "^1.2.4",
     "esno": "^4.8.0",
-    "front-matter": "^4.0.2",
-    "fs": "^0.0.1-security",
     "fs-extra": "^11.3.2",
     "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
-    "hashids": "^2.3.0",
     "html2particle": "^0.0.10",
     "lodash-es": "^4.17.21",
     "lunisolar": "^2.6.0",
-    "markdown-it-anchor": "^9.2.0",
     "markdown-it-collapsible": "^2.0.2",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-front-matter": "^0.2.4",
@@ -214,9 +203,7 @@
     "medium-zoom": "^1.1.0",
     "nanoid": "^5.1.6",
     "nprogress-v2": "^1.1.10",
-    "ofetch": "^1.4.1",
     "ora": "^9.0.0",
-    "oxc-minify": "^0.93.0",
     "pagefind": "^1.4.0",
     "pinia": "^3.0.3",
     "pinyin-match": "^1.2.8",
@@ -228,7 +215,6 @@
     "screenfull": "^6.0.2",
     "simple-git": "^3.28.0",
     "ua-parser-js": "^2.0.5",
-    "vite-plugin-find-image-duplicates": "^0.0.10",
     "vite-plugin-inspect": "^11.3.3",
     "vite-plugin-pwa": "^1.0.3",
     "vitepress": "^2.0.0-alpha.12",
@@ -252,6 +238,7 @@
     "@zenuml/core": "^3.41.4",
     "highlight.js": "^11.11.1",
     "mermaid": "^11.12.0",
+    "oxc-minify": "^0.93.0",
     "prismjs": "^1.30.0",
     "release-it": "^19.0.5",
     "svg-pan-zoom": "^3.6.2",
