--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "sitemap": "^8.0.0",
     "svgo": "^4.0.0",
     "typescript": "^5.9.3",
-    "unocss": "^66.5.2",
+    "unocss": "^66.5.3",
     "unplugin-auto-import": "^20.2.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.4.2",
@@ -154,13 +154,13 @@
     "@vitest/ui": "^3.2.4",
     "@vue-styled-components/core": "^1.13.3",
     "@vue-styled-components/plugin": "^1.0.1",
+    "@vueuse/core": "^13.9.0",
     "@zumer/snapdom": "^1.9.14",
     "animate.css": "^4.1.1",
     "animejs": "4.1.4",
     "ant-design-vue": "4.2.6",
     "chalk": "^5.6.2",
     "cross-env": "^10.1.0",
-    "dayjs": "^1.11.18",
     "deepmerge-ts": "^7.1.5",
     "default-passive-events": "^4.0.0",
     "driver.js": "^1.3.6",
@@ -222,7 +222,8 @@
     "yuppie-ui": "^0.0.11"
   },
   "overrides": {
-    "@zenuml/core": "^3.41.5",
+    "@zenuml/core": "^3.41.6",
+    "dayjs": "^1.11.18",
     "highlight.js": "^11.11.1",
     "mermaid": "^11.12.0",
     "oxc-minify": "^0.93.0",
