--- a/package.json
+++ b/package.json
@@ -69,10 +69,11 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@commitlint/cz-commitlint": "^20.1.0",
     "@iconify-json/devicon": "^1.2.45",
+    "@iconify-json/logos": "^1.2.9",
     "@iconify-json/skill-icons": "^1.2.3",
-    "@iconify-json/vscode-icons": "^1.2.31",
+    "@iconify-json/vscode-icons": "^1.2.32",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.394",
+    "@iconify/json": "^2.2.395",
     "@iconify/utils": "^3.0.2",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@plugin-web-update-notification/vite": "^2.0.2",
@@ -80,7 +81,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^24.7.1",
+    "@types/node": "^24.7.2",
     "@vite-pwa/vitepress": "^1.0.0",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
     "canvas-confetti": "^1.9.3",
