--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "@iconify-json/skill-icons": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.32",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.395",
+    "@iconify/json": "^2.2.396",
     "@iconify/utils": "^3.0.2",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@plugin-web-update-notification/vite": "^2.0.2",
@@ -82,7 +82,6 @@
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
     "@types/node": "^24.7.2",
-    "@vite-pwa/vitepress": "^1.0.1",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
     "canvas-confetti": "^1.9.3",
     "code-inspector-plugin": "^1.2.10",
@@ -101,13 +100,13 @@
     "mkcert": "^3.2.0",
     "node-scp2": "^1.0.0",
     "picocolors": "^1.1.1",
-    "rolldown-vite": "^7.1.16",
+    "rolldown-vite": "^7.1.17",
     "sass-embedded": "^1.93.2",
     "sharp": "^0.34.4",
     "sitemap": "^8.0.0",
     "svgo": "^4.0.0",
     "typescript": "^5.9.3",
-    "unocss": "^66.5.3",
+    "unocss": "^66.5.4",
     "unplugin-auto-import": "^20.2.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.4.2",
@@ -122,7 +121,6 @@
     "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.9",
     "vite-plugin-mock-dev-server": "^2.0.1",
-    "vite-plugin-pwa": "^1.1.0",
     "vite-plugin-px2rem": "^1.0.5",
     "vite-plugin-qrcode": "^0.3.0",
     "vite-plugin-robots": "^1.0.5",
@@ -134,13 +132,14 @@
     "vitepress-plugin-llms": "^1.8.0",
     "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-plugin-npm-commands": "^0.8.1",
+    "vitepress-plugin-rss": "^0.3.2",
     "vitepress-plugin-setfrontmatter": "^1.2.3",
     "vitepress-plugin-tabs": "^0.7.3",
     "vitest": "^3.2.4"
   },
   "dependencies": {
     "@catppuccin/vitepress": "^0.1.2",
-    "@faker-js/faker": "^10.0.0",
+    "@faker-js/faker": "^10.1.0",
     "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@iconify-json/carbon": "^1.2.14",
     "@iconify-json/line-md": "^1.2.11",
@@ -211,7 +210,7 @@
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
     "vitepress-plugin-frontmatter": "^2.0.1",
-    "vitepress-plugin-group-icons": "^1.6.3",
+    "vitepress-plugin-group-icons": "^1.6.4",
     "vitepress-plugin-legend": "^1.1.0",
     "vitepress-plugin-md-h1": "^1.0.11",
     "vitepress-plugin-pagefind": "^0.4.15",
@@ -231,7 +230,7 @@
     "prismjs": "^1.30.0",
     "release-it": "^19.0.5",
     "svg-pan-zoom": "^3.6.2",
-    "vite": "npm:rolldown-vite@7.1.16",
+    "vite": "npm:rolldown-vite@7.1.17",
     "vite-plugin-html": "^3.2.2",
     "vitepress": "^2.0.0-alpha.12",
     "vue": "^3.5.22"
