--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "font:build": "node scripts/font_reset.cjs && npx font-spider fonts-spider/index.html --no-backup && node scripts/font_move.cjs",
     "font:test": "node --disable-warning=ExperimentalWarning --env-file .env scripts/env-test.ts",
     "lint": "eslint --fix --ext .ts,.js,.vue src test/unit",
+    "lint:fix": "eslint . --fix",
+    "lint:console": "npx @eslint/config-inspector@latest",
     "prepare": "husky",
     "license:checker": "license-checker --trace-deprecation --json > ./licenses.json",
     "license:checker:csv": "license-checker --csv > ./licenses.csv",
@@ -65,15 +67,16 @@
     }
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^6.0.0",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@commitlint/cz-commitlint": "^20.1.0",
     "@iconify-json/devicon": "^1.2.45",
     "@iconify-json/logos": "^1.2.9",
     "@iconify-json/skill-icons": "^1.2.3",
-    "@iconify-json/vscode-icons": "^1.2.32",
+    "@iconify-json/vscode-icons": "^1.2.33",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.398",
+    "@iconify/json": "^2.2.399",
     "@iconify/utils": "^3.0.2",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@plugin-web-update-notification/vite": "^2.0.2",
@@ -91,6 +94,7 @@
     "commitlint-config-git-commit-emoji": "^1.0.0",
     "cz-customizable": "^7.5.1",
     "cz-message-helper": "^2.0.0",
+    "eslint": "^9.38.0",
     "feed": "^5.1.0",
     "glob": "^11.0.3",
     "husky": "^9.1.7",
@@ -112,6 +116,7 @@
     "unplugin-icons": "^22.5.0",
     "unplugin-version-injector": "^2.1.1",
     "unplugin-vue-components": "^30.0.0",
+    "vite-plugin-checker": "^0.11.0",
     "vite-plugin-compression2": "^2.3.0",
     "vite-plugin-env-parse": "^1.0.15",
     "vite-plugin-fake-server": "^2.2.0",
@@ -135,12 +140,12 @@
     "vitepress-plugin-rss": "^0.3.2",
     "vitepress-plugin-setfrontmatter": "^1.2.3",
     "vitepress-plugin-tabs": "^0.7.3",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.1"
   },
   "dependencies": {
     "@catppuccin/vitepress": "^0.1.2",
     "@faker-js/faker": "^10.1.0",
-    "@fingerprintjs/fingerprintjs": "^4.6.2",
+    "@fingerprintjs/fingerprintjs": "^5.0.1",
     "@iconify-json/carbon": "^1.2.14",
     "@iconify-json/line-md": "^1.2.11",
     "@iconify-json/mdi": "^1.2.3",
@@ -150,14 +155,14 @@
     "@opentiny/icons": "^0.1.4",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
+    "@vitest/coverage-v8": "^4.0.1",
+    "@vitest/ui": "^4.0.1",
     "@vue-styled-components/core": "^1.13.3",
     "@vue-styled-components/plugin": "^1.0.1",
-    "@vueuse/core": "^13.9.0",
+    "@vueuse/core": "^14.0.0",
     "@zumer/snapdom": "^1.9.14",
     "animate.css": "^4.1.1",
-    "animejs": "4.1.4",
+    "animejs": "4.2.2",
     "ant-design-vue": "4.2.6",
     "chalk": "^5.6.2",
     "cross-env": "^10.1.0",
