--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
     "markdown-it-front-matter": "^0.2.4",
     "markdown-it-github-alerts": "^1.0.0",
     "markdown-it-hashmention": "^0.3.9",
+    "markdown-it-markmap": "^0.1.0",
     "markdown-it-mathjax3-pro": "^1.0.0",
     "markdown-it-multimd-table-ext": "^4.2.32",
     "markdown-it-named-code-blocks": "^1.0.6",
@@ -211,6 +212,7 @@
     "vite-plugin-inspect": "^11.3.3",
     "vitepress": "^2.0.0-alpha.12",
     "vitepress-markdown-timeline": "^1.2.2",
+    "vitepress-markmap-preview": "^0.1.0",
     "vitepress-plugin-auto-frontmatter": "^1.0.13",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
