--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,7 @@
     "package.json": ".nvmrc,.npmrc,tsconfig.*.json,*.cjs,*.js,*.json,*.config.ts,*.config.cjs,*.config.mjs,.preettierrc,.eslintrc.cjs,.eslintrc,.gitignore,.editorconfig,.node-version,.browserslistrc,.hintrc,licenses.csv,*.depcheckrc",
     ".env": "env.*,.env.*,.robots.*.txt",
     "components.d.ts": "auto-imports.d.ts,components.d.ts",
-    "index.md": "index.md,login.md,archives.md,tags.md,me.*.md,manuals.md,resume.md,about.md,en-US.md,zh-CN.md,sponsor.md,CONTRIBUTING.md,CODE_OF_CONDUCT.md,CONTRIBUTING.zh-CN.md,README.md,CHANGELOG.md,PRIVACY_POLICY.md,TERMS_OF_SERVICE.md,logo.svg",
+    "index.md": "index.md,login.md,archives.md,tags.md,about-*.md,me.*.md,manuals.md,resume.md,about.md,en-US.md,zh-CN.md,sponsor.md,CONTRIBUTING.md,CODE_OF_CONDUCT.md,CONTRIBUTING.zh-CN.md,README.md,CHANGELOG.md,PRIVACY_POLICY.md,TERMS_OF_SERVICE.md,logo.svg",
     "Dockerfile": "Dockerfile, .dockerignore"
   },
   "workbench.colorCustomizations": {
