--- a/package.json
+++ b/package.json
@@ -139,7 +139,7 @@
     "vitepress-plugin-npm-commands": "^0.8.1",
     "vitepress-plugin-rss": "^0.3.2",
     "vitepress-plugin-setfrontmatter": "^1.2.3",
-    "vitepress-plugin-tabs": "^0.7.3",
+    "vitepress-plugin-tabs": "0.7.2",
     "vitest": "^4.0.8"
   },
   "dependencies": {
