--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue-jsx": "^5.1.2",
     "canvas-confetti": "^1.9.4",
-    "code-inspector-plugin": "^1.2.10",
+    "code-inspector-plugin": "^1.3.0",
     "commitizen": "^4.3.1",
     "commitlint": "^20.1.0",
     "commitlint-config-cz": "^0.13.3",
@@ -110,7 +110,7 @@
     "sitemap": "^9.0.0",
     "svgo": "^4.0.0",
     "typescript": "^5.9.3",
-    "unocss": "^66.5.7",
+    "unocss": "^66.5.9",
     "unplugin-auto-import": "^20.2.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.5.0",
@@ -125,7 +125,7 @@
     "vite-plugin-image-placeholder": "^1.1.0",
     "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.9",
-    "vite-plugin-mock-dev-server": "^2.0.2",
+    "vite-plugin-mock-dev-server": "^2.0.4",
     "vite-plugin-px2rem": "^1.0.5",
     "vite-plugin-qrcode": "^0.3.0",
     "vite-plugin-robots": "^1.0.5",
@@ -137,9 +137,9 @@
     "vitepress-plugin-llms": "^1.9.3",
     "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-plugin-npm-commands": "^0.8.1",
-    "vitepress-plugin-rss": "^0.3.3",
+    "vitepress-plugin-rss": "^0.3.4",
     "vitepress-plugin-setfrontmatter": "^1.2.3",
-    "vitest": "^4.0.10"
+    "vitest": "^4.0.13"
   },
   "dependencies": {
     "@catppuccin/vitepress": "^0.1.2",
@@ -156,8 +156,8 @@
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vitepress-demo-preview/component": "^2.6.1",
     "@vitepress-demo-preview/plugin": "^1.4.1",
-    "@vitest/coverage-v8": "^4.0.10",
-    "@vitest/ui": "^4.0.10",
+    "@vitest/coverage-v8": "^4.0.13",
+    "@vitest/ui": "^4.0.13",
     "@vue-styled-components/core": "^1.13.3",
     "@vue-styled-components/plugin": "^1.0.1",
     "@vueuse/core": "^14.0.0",
@@ -194,7 +194,7 @@
     "markdown-it-sup": "^2.0.0",
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
-    "marked": "^17.0.0",
+    "marked": "^17.0.1",
     "medium-zoom": "^1.1.0",
     "nanoid": "^5.1.6",
     "nprogress-v2": "^1.1.10",
@@ -210,7 +210,7 @@
     "simple-git": "^3.30.0",
     "ua-parser-js": "^2.0.6",
     "vite-plugin-inspect": "^11.3.3",
-    "vitepress": "^2.0.0-alpha.13",
+    "vitepress": "^2.0.0-alpha.15",
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-markmap-preview": "^0.1.0",
     "vitepress-plugin-auto-frontmatter": "^1.0.13",
@@ -221,6 +221,7 @@
     "vitepress-plugin-legend": "^1.1.0",
     "vitepress-plugin-md-h1": "^1.0.11",
     "vitepress-plugin-pagefind": "^0.4.16",
+    "vitepress-plugin-tabs": "^0.7.3",
     "vitepress-protect-plugin": "^1.0.6",
     "vue3-simple-icons": "^15.6.0",
     "xlogs": "^0.1.0",
@@ -237,7 +238,7 @@
     "svg-pan-zoom": "^3.6.2",
     "vite": "npm:rolldown-vite@7.2.7",
     "vite-plugin-html": "^3.2.2",
-    "vitepress": "^2.0.0-alpha.13",
+    "vitepress": "^2.0.0-alpha.15",
     "vue": "^3.5.24"
   },
   "version": "0.11.7"
