--- a/package.json
+++ b/package.json
@@ -67,34 +67,35 @@
     }
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^6.2.0",
-    "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^20.0.0",
-    "@commitlint/cz-commitlint": "^20.1.0",
-    "@iconify-json/devicon": "^1.2.50",
+    "@antfu/eslint-config": "^6.7.3",
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
+    "@commitlint/cz-commitlint": "^20.2.0",
+    "@iconify-json/devicon": "^1.2.55",
     "@iconify-json/logos": "^1.2.10",
     "@iconify-json/skill-icons": "^1.2.3",
-    "@iconify-json/vscode-icons": "^1.2.36",
+    "@iconify-json/vscode-icons": "^1.2.37",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.410",
-    "@iconify/utils": "^3.0.2",
+    "@iconify/json": "^2.2.421",
+    "@iconify/utils": "^3.1.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@plugin-web-update-notification/vite": "^2.0.2",
-    "@release-it/conventional-changelog": "^10.0.2",
+    "@release-it/conventional-changelog": "^10.0.4",
+    "@tdesign-vue-next/auto-import-resolver": "^0.1.4",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^24.10.1",
-    "@vitejs/plugin-vue-jsx": "^5.1.2",
+    "@types/node": "^25.0.3",
+    "@vitejs/plugin-vue-jsx": "^5.1.3",
     "canvas-confetti": "^1.9.4",
-    "code-inspector-plugin": "^1.3.0",
+    "code-inspector-plugin": "^1.3.4",
     "commitizen": "^4.3.1",
-    "commitlint": "^20.1.0",
+    "commitlint": "^20.2.0",
     "commitlint-config-cz": "^0.13.3",
     "commitlint-config-git-commit-emoji": "^1.0.0",
     "cz-customizable": "^7.5.1",
     "cz-message-helper": "^2.0.0",
-    "eslint": "^9.39.1",
+    "eslint": "^9.39.2",
     "feed": "^5.1.0",
     "glob": "^13.0.0",
     "husky": "^9.1.7",
@@ -105,19 +106,19 @@
     "node-scp2": "^1.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
-    "sass-embedded": "^1.93.3",
+    "sass-embedded": "^1.97.1",
     "sharp": "^0.34.5",
     "sitemap": "^9.0.0",
     "svgo": "^4.0.0",
     "typescript": "^5.9.3",
-    "unocss": "^66.5.9",
-    "unplugin-auto-import": "^20.2.0",
+    "unocss": "^66.5.11",
+    "unplugin-auto-import": "^20.3.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.5.0",
     "unplugin-version-injector": "^2.1.1",
     "unplugin-vue-components": "^30.0.0",
     "vite-plugin-checker": "^0.11.0",
-    "vite-plugin-compression2": "^2.3.1",
+    "vite-plugin-compression2": "^2.4.0",
     "vite-plugin-env-parse": "^1.0.15",
     "vite-plugin-fake-server": "^2.2.2",
     "vite-plugin-html-config": "^2.0.2",
@@ -125,14 +126,14 @@
     "vite-plugin-image-placeholder": "^1.1.0",
     "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.9",
-    "vite-plugin-mock-dev-server": "^2.0.5",
+    "vite-plugin-mock-dev-server": "^2.0.7",
     "vite-plugin-px2rem": "^1.0.5",
     "vite-plugin-qrcode": "^0.3.0",
     "vite-plugin-robots": "^1.0.5",
-    "vite-plugin-simple-html": "^1.0.1",
+    "vite-plugin-simple-html": "^1.1.0",
     "vite-plugin-version-mark": "^0.2.2",
-    "vitepress-demo-plugin": "^1.5.0",
-    "vitepress-i18n": "^1.3.4",
+    "vitepress-demo-plugin": "^1.5.1",
+    "vitepress-i18n": "^1.3.5",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-llms": "^1.9.3",
     "vitepress-plugin-mermaid": "^2.0.17",
@@ -144,7 +145,7 @@
     "@catppuccin/vitepress": "^0.1.2",
     "@faker-js/faker": "^10.1.0",
     "@fingerprintjs/fingerprintjs": "^5.0.1",
-    "@iconify-json/carbon": "^1.2.14",
+    "@iconify-json/carbon": "^1.2.15",
     "@iconify-json/line-md": "^1.2.11",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify/vue": "^5.0.0",
@@ -155,15 +156,14 @@
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vitepress-demo-preview/component": "^2.6.1",
     "@vitepress-demo-preview/plugin": "^1.4.1",
-    "@vitest/coverage-v8": "^4.0.4",
-    "@vitest/ui": "^4.0.14",
+    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "@vue-styled-components/core": "^1.13.3",
     "@vue-styled-components/plugin": "^1.0.1",
-    "@vueuse/core": "^14.0.0",
-    "@zumer/snapdom": "^2.0.0",
+    "@vueuse/core": "^14.1.0",
+    "@zumer/snapdom": "^2.0.1",
     "animate.css": "^4.1.1",
     "animejs": "4.2.2",
-    "ant-design-vue": "4.2.6",
     "chalk": "^5.6.2",
     "cross-env": "^10.1.0",
     "deepmerge-ts": "^7.1.5",
@@ -171,12 +171,13 @@
     "driver.js": "^1.4.0",
     "echarts": "^6.0.0",
     "esno": "^4.8.0",
-    "fs-extra": "^11.3.2",
+    "fs-extra": "^11.3.3",
     "gray-matter": "^4.0.3",
-    "gsap": "^3.13.0",
+    "gsap": "^3.14.2",
     "html2particle": "^0.0.10",
-    "lodash-es": "^4.17.21",
+    "lodash-es": "^4.17.22",
     "lunisolar": "^2.6.0",
+    "markdown-exit": "^1.0.0-beta.6",
     "markdown-it-collapsible": "^2.0.2",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-front-matter": "^0.2.4",
@@ -184,7 +185,7 @@
     "markdown-it-hashmention": "^0.3.9",
     "markdown-it-markmap": "^0.1.0",
     "markdown-it-mathjax3-pro": "^1.0.0",
-    "markdown-it-multimd-table-ext": "^4.2.32",
+    "markdown-it-multimd-table-ext": "^4.2.35",
     "markdown-it-named-code-blocks": "^1.0.6",
     "markdown-it-regex": "^0.2.2",
     "markdown-it-replace-link": "^1.2.2",
@@ -200,14 +201,15 @@
     "ora": "^9.0.0",
     "pagefind": "^1.4.0",
     "pinia": "^3.0.4",
-    "pinyin-match": "^1.2.9",
+    "pinyin-match": "^1.2.10",
     "pinyin-pro": "^3.27.0",
     "random": "^5.4.1",
     "randomcolor": "^0.6.2",
     "scp2": "^0.5.0",
     "screenfull": "^6.0.2",
     "simple-git": "^3.30.0",
-    "ua-parser-js": "^2.0.6",
+    "tdesign-vue-next": "^1.17.7",
+    "ua-parser-js": "^2.0.7",
     "vite-plugin-inspect": "^11.3.3",
     "vitepress": "^2.0.0-alpha.15",
     "vitepress-markdown-timeline": "^1.2.2",
@@ -217,29 +219,31 @@
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
     "vitepress-plugin-frontmatter": "^2.0.1",
     "vitepress-plugin-group-icons": "^1.6.5",
-    "vitepress-plugin-legend": "^1.1.0",
+    "vitepress-plugin-legend": "^1.2.1",
     "vitepress-plugin-md-h1": "^1.0.11",
-    "vitepress-plugin-pagefind": "^0.4.16",
+    "vitepress-plugin-pagefind": "^0.4.18",
     "vitepress-plugin-tabs": "^0.7.3",
     "vitepress-protect-plugin": "^1.0.6",
+    "vue-client-only": "^2.1.0",
+    "vue3-next-qrcode": "^4.0.0",
     "vue3-simple-icons": "^15.6.0",
     "xlogs": "^0.1.0",
     "yuppie-ui": "^0.0.11"
   },
   "overrides": {
-    "@zenuml/core": "^3.43.1",
+    "@zenuml/core": "^3.43.2",
     "dayjs": "^1.11.19",
     "highlight.js": "^11.11.1",
-    "mermaid": "^11.12.1",
+    "mermaid": "^11.12.2",
     "oxc-minify": "^0.93.0",
     "prismjs": "^1.30.0",
-    "release-it": "^19.0.6",
+    "release-it": "^19.2.1",
     "svg-pan-zoom": "^3.6.2",
-    "vite": "npm:rolldown-vite@7.2.7",
+    "vite": "8.0.0-beta.4",
     "vite-plugin-html": "^3.2.2",
     "vitepress": "^2.0.0-alpha.15",
-    "vitest": "^4.0.14",
-    "vue": "^3.5.25"
+    "vitest": "^4.0.16",
+    "vue": "^3.5.26"
   },
   "version": "0.11.8"
 }
