--- a/package.json
+++ b/package.json
@@ -68,18 +68,16 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.7.3",
-    "@commitlint/cli": "^20.3.0",
-    "@commitlint/config-conventional": "^20.3.0",
-    "@commitlint/cz-commitlint": "^20.3.0",
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
+    "@commitlint/cz-commitlint": "^20.3.1",
     "@iconify-json/devicon": "^1.2.56",
     "@iconify-json/logos": "^1.2.10",
     "@iconify-json/skill-icons": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.37",
-    "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.425",
+    "@iconify/json": "^2.2.426",
     "@iconify/utils": "^3.1.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
-    "@plugin-web-update-notification/vite": "^2.0.2",
     "@release-it/conventional-changelog": "^10.0.4",
     "@tdesign-vue-next/auto-import-resolver": "^0.1.4",
     "@types/fs-extra": "^11.0.4",
@@ -89,7 +87,7 @@
     "@vitejs/plugin-vue-jsx": "^5.1.3",
     "canvas-confetti": "^1.9.4",
     "commitizen": "^4.3.1",
-    "commitlint": "^20.3.0",
+    "commitlint": "^20.3.1",
     "commitlint-config-cz": "^0.13.3",
     "commitlint-config-git-commit-emoji": "^1.0.0",
     "cz-customizable": "^7.5.1",
@@ -117,7 +115,7 @@
     "unplugin-icons": "^22.5.0",
     "unplugin-version-injector": "^2.1.1",
     "unplugin-vue-components": "^30.0.0",
-    "vite-plugin-checker": "^0.11.0",
+    "vite-plugin-checker": "^0.12.0",
     "vite-plugin-compression2": "^2.4.0",
     "vite-plugin-env-parse": "^1.0.15",
     "vite-plugin-fake-server": "^2.2.2",
@@ -129,7 +127,6 @@
     "vite-plugin-mock-dev-server": "^2.0.7",
     "vite-plugin-px2rem": "^1.0.5",
     "vite-plugin-qrcode": "^0.3.0",
-    "vite-plugin-simple-html": "^1.1.0",
     "vite-plugin-version-mark": "^0.2.2",
     "vitepress-demo-plugin": "^1.5.1",
     "vitepress-i18n": "^1.3.5",
@@ -137,7 +134,7 @@
     "vitepress-plugin-llms": "^1.10.0",
     "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-plugin-npm-commands": "^0.8.1",
-    "vitepress-plugin-rss": "^0.3.4",
+    "vitepress-plugin-rss": "^0.4.2",
     "vitepress-plugin-setfrontmatter": "^1.2.3"
   },
   "dependencies": {
@@ -167,14 +164,13 @@
     "chalk": "^5.6.2",
     "cross-env": "^10.1.0",
     "deepmerge-ts": "^7.1.5",
-    "default-passive-events": "^4.0.0",
     "driver.js": "^1.4.0",
     "echarts": "^6.0.0",
     "esno": "^4.8.0",
     "fs-extra": "^11.3.3",
     "gray-matter": "^4.0.3",
     "gsap": "^3.14.2",
-    "html2particle": "^0.0.10",
+    "html2particle": "^0.0.11-beta.5",
     "lodash-es": "^4.17.22",
     "lunisolar": "^2.6.0",
     "markdown-exit": "^1.0.0-beta.7",
@@ -183,9 +179,8 @@
     "markdown-it-front-matter": "^0.2.4",
     "markdown-it-github-alerts": "^1.0.0",
     "markdown-it-hashmention": "^0.3.9",
+    "markdown-it-mathjax3": "^5.2.0",
     "markdown-it-markmap": "^0.1.0",
-    "markdown-it-mathjax3": "^4.3.2",
-    "markdown-it-mathjax3-pro": "^1.0.0",
     "markdown-it-multimd-table-ext": "^4.2.35",
     "markdown-it-named-code-blocks": "^1.0.6",
     "markdown-it-regex": "^0.2.2",
@@ -209,12 +204,12 @@
     "scp2": "^0.5.0",
     "screenfull": "^6.0.2",
     "simple-git": "^3.30.0",
-    "tdesign-vue-next": "^1.17.7",
+    "tdesign-vue-next": "^1.18.0",
     "ua-parser-js": "^2.0.7",
     "vite-plugin-inspect": "^11.3.3",
     "vitepress": "^2.0.0-alpha.15",
     "vitepress-markdown-timeline": "^1.2.2",
-    "vitepress-markmap-preview": "^0.1.0",
+    "vitepress-markmap-preview": "^0.2.0",
     "vitepress-plugin-auto-frontmatter": "^1.0.13",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
     "vitepress-plugin-frontmatter": "^2.0.1",
@@ -233,6 +228,7 @@
     "@zenuml/core": "^3.45.3",
     "dayjs": "^1.11.19",
     "highlight.js": "^11.11.1",
+    "markdown-it-mathjax3": "^5.2.0",
     "mermaid": "^11.12.2",
     "oxc-minify": "^0.93.0",
     "prismjs": "^1.30.0",
