--- a/package.json
+++ b/package.json
@@ -71,11 +71,7 @@
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@commitlint/cz-commitlint": "^20.3.1",
-    "@iconify-json/devicon": "^1.2.56",
-    "@iconify-json/logos": "^1.2.10",
-    "@iconify-json/skill-icons": "^1.2.3",
-    "@iconify-json/vscode-icons": "^1.2.37",
-    "@iconify/json": "^2.2.426",
+    "@iconify/json": "^2.2.427",
     "@iconify/utils": "^3.1.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.4",
@@ -83,7 +79,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^25.0.3",
+    "@types/node": "^25.0.6",
     "@vitejs/plugin-vue-jsx": "^5.1.3",
     "commitizen": "^4.3.1",
     "commitlint": "^20.3.1",
@@ -92,7 +88,7 @@
     "cz-customizable": "^7.5.1",
     "cz-message-helper": "^2.0.0",
     "eslint": "^9.39.2",
-    "feed": "^5.1.0",
+    "feed": "^5.2.0",
     "font-spider": "^1.3.5",
     "glob": "^13.0.0",
     "husky": "^9.1.7",
@@ -137,10 +133,10 @@
     "@catppuccin/vitepress": "^0.1.2",
     "@faker-js/faker": "^10.2.0",
     "@fingerprintjs/fingerprintjs": "^5.0.1",
-    "@iconify-json/carbon": "^1.2.15",
-    "@iconify-json/line-md": "^1.2.13",
-    "@iconify-json/mdi": "^1.2.3",
     "@iconify/vue": "^5.0.0",
+    "@mdit/plugin-figure": "^0.22.2",
+    "@mdit/plugin-img-lazyload": "^0.22.1",
+    "@mdit/plugin-tasklist": "^0.22.2",
     "@mermaid-js/layout-elk": "^0.2.0",
     "@mermaid-js/mermaid-zenuml": "^0.2.2",
     "@opentiny/icons": "^0.1.4",
@@ -158,6 +154,7 @@
     "animejs": "4.2.2",
     "browserslist": "^4.28.1",
     "chalk": "^5.6.2",
+    "copy-to-clipboard": "^3.3.3",
     "cross-env": "^10.1.0",
     "deepmerge-ts": "^7.1.5",
     "driver.js": "^1.4.0",
@@ -174,6 +171,7 @@
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-front-matter": "^0.2.4",
     "markdown-it-github-alerts": "^1.0.0",
+    "markdown-it-image-size": "^15.0.1",
     "markdown-it-mathjax3": "^5.2.0",
     "markdown-it-multimd-table-ext": "^4.2.35",
     "markdown-it-named-code-blocks": "^1.0.6",
@@ -204,6 +202,7 @@
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
     "vitepress-plugin-frontmatter": "^2.0.1",
     "vitepress-plugin-group-icons": "^1.6.5",
+    "vitepress-plugin-image-preview": "^0.1.1",
     "vitepress-plugin-legend": "^1.2.1",
     "vitepress-plugin-md-h1": "^1.0.11",
     "vitepress-plugin-pagefind": "^0.4.18",
