--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,7 +84,21 @@
   "typescript.tsserver.nodePath": "node",
   "vitest.shellType": "terminal",
   "commentTranslate.targetLanguage": "zh-CN",
-  "commentTranslate.hover.enabled": true
+  "commentTranslate.hover.enabled": true,
+  "cssvar.files": [
+    "./node_modules/open-props/open-props.min.css",
+    // if you have an alternative path to where your styles are located
+    // you can add it in this array of files
+    "assets/styles/variables.css"
+  ],
+
+  // Do not ignore node_modules css files, which is ignored by default
+  "cssvar.ignore": [],
+
+  // add support for autocomplete in JS or JS like files
+  "cssvar.extensions": [
+    "css", "postcss", "jsx", "tsx", "vue", "scss"
+  ]
   //   // 拖拽行为
   //   "markdown.editor.drop.copyIntoWorkspace": "never",
   //   // 粘贴行为
