--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     }
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^6.7.3",
+    "@antfu/eslint-config": "^7.0.0",
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@commitlint/cz-commitlint": "^20.3.1",
@@ -79,7 +79,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^25.0.6",
+    "@types/node": "^25.0.8",
     "@vitejs/plugin-vue-jsx": "^5.1.3",
     "commitizen": "^4.3.1",
     "commitlint": "^20.3.1",
@@ -144,8 +144,8 @@
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vitepress-demo-preview/component": "^2.6.1",
     "@vitepress-demo-preview/plugin": "^1.4.1",
-    "@vitest/coverage-v8": "^4.0.16",
-    "@vitest/ui": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.17",
+    "@vitest/ui": "^4.0.17",
     "@vue-styled-components/core": "^1.13.3",
     "@vue-styled-components/plugin": "^1.0.1",
     "@vueuse/core": "^14.1.0",
@@ -166,6 +166,7 @@
     "html2particle": "^0.0.11-beta.5",
     "lodash-es": "^4.17.22",
     "lunisolar": "^2.6.0",
+    "mark.js": "^8.11.1",
     "markdown-exit": "^1.0.0-beta.7",
     "markdown-it-collapsible": "^2.0.2",
     "markdown-it-footnote": "^4.0.0",
@@ -183,6 +184,7 @@
     "medium-zoom": "^1.1.0",
     "nanoid": "^5.1.6",
     "nprogress-v2": "^1.1.10",
+    "open-props": "^1.7.17",
     "ora": "^9.0.0",
     "pagefind": "^1.4.0",
     "pinia": "^3.0.4",
@@ -193,7 +195,7 @@
     "screenfull": "^6.0.2",
     "simple-git": "^3.30.0",
     "tdesign-vue-next": "^1.18.0",
-    "ua-parser-js": "^2.0.7",
+    "ua-parser-js": "^2.0.8",
     "vite-plugin-inspect": "^11.3.3",
     "vitepress": "^2.0.0-alpha.15",
     "vitepress-markdown-timeline": "^1.2.2",
@@ -214,7 +216,7 @@
     "yuppie-ui": "^0.0.11"
   },
   "overrides": {
-    "@zenuml/core": "^3.45.3",
+    "@zenuml/core": "^3.45.4",
     "dayjs": "^1.11.19",
     "highlight.js": "^11.11.1",
     "markdown-it-mathjax3": "^5.2.0",
@@ -226,7 +228,7 @@
     "vite": "8.0.0-beta.7",
     "vite-plugin-html": "^3.2.2",
     "vitepress": "^2.0.0-alpha.15",
-    "vitest": "^4.0.16",
+    "vitest": "^4.0.17",
     "vue": "^3.5.26"
   },
   "version": "0.11.17"
