--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "vite-plugin-html-config": "^2.0.2",
     "vite-plugin-image-optimizer": "^2.0.3",
     "vite-plugin-image-preload": "^1.0.0",
+    "vite-plugin-lightningcss": "^0.0.5",
     "vite-plugin-mkcert": "^1.17.9",
     "vite-plugin-mock-dev-server": "^2.0.7",
     "vite-plugin-qrcode": "^0.3.0",
