--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
     }
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^7.0.0",
+    "@antfu/eslint-config": "^7.0.1",
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@commitlint/cz-commitlint": "^20.3.1",
-    "@iconify/json": "^2.2.427",
+    "@iconify/json": "^2.2.428",
     "@iconify/utils": "^3.1.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.4",
@@ -80,6 +80,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
     "@types/node": "^25.0.8",
+    "@types/three": "^0.182.0",
     "@vitejs/plugin-vue-jsx": "^5.1.3",
     "commitizen": "^4.3.1",
     "commitlint": "^20.3.1",
@@ -102,13 +103,14 @@
     "sharp": "^0.34.5",
     "sitemap": "^9.0.0",
     "svgo": "^4.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "unocss": "^66.5.12",
-    "unplugin-auto-import": "^20.3.0",
+    "unocss": "^66.6.0",
+    "unplugin-auto-import": "^21.0.0",
     "unplugin-iconify-generator": "^0.7.3",
-    "unplugin-icons": "^22.5.0",
+    "unplugin-icons": "^23.0.1",
     "unplugin-version-injector": "^2.1.1",
-    "unplugin-vue-components": "^30.0.0",
+    "unplugin-vue-components": "^31.0.0",
     "vite-plugin-checker": "^0.12.0",
     "vite-plugin-compression2": "^2.4.0",
     "vite-plugin-env-parse": "^1.0.15",
@@ -116,7 +118,6 @@
     "vite-plugin-html-config": "^2.0.2",
     "vite-plugin-image-optimizer": "^2.0.3",
     "vite-plugin-image-preload": "^1.0.0",
-    "vite-plugin-lightningcss": "^0.0.5",
     "vite-plugin-mkcert": "^1.17.9",
     "vite-plugin-mock-dev-server": "^2.0.7",
     "vite-plugin-qrcode": "^0.3.0",
@@ -160,10 +161,10 @@
     "deepmerge-ts": "^7.1.5",
     "driver.js": "^1.4.0",
     "echarts": "^6.0.0",
-    "esno": "^4.8.0",
     "fs-extra": "^11.3.3",
     "gray-matter": "^4.0.3",
     "gsap": "^3.14.2",
+    "hover-tilt": "^1.0.0",
     "html2particle": "^0.0.11-beta.5",
     "lodash-es": "^4.17.22",
     "lunisolar": "^2.6.0",
@@ -196,6 +197,7 @@
     "screenfull": "^6.0.2",
     "simple-git": "^3.30.0",
     "tdesign-vue-next": "^1.18.0",
+    "three": "^0.182.0",
     "ua-parser-js": "^2.0.8",
     "vite-plugin-inspect": "^11.3.3",
     "vitepress": "^2.0.0-alpha.15",
