--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^25.0.8",
+    "@types/node": "^25.0.9",
     "@types/three": "^0.182.0",
     "@vitejs/plugin-vue-jsx": "^5.1.3",
     "commitizen": "^4.3.1",
@@ -133,6 +133,7 @@
   },
   "dependencies": {
     "@catppuccin/vitepress": "^0.1.2",
+    "@dgreenheck/ez-tree": "^1.1.0",
     "@faker-js/faker": "^10.2.0",
     "@fingerprintjs/fingerprintjs": "^5.0.1",
     "@iconify/vue": "^5.0.0",
@@ -142,6 +143,7 @@
     "@mermaid-js/layout-elk": "^0.2.0",
     "@mermaid-js/mermaid-zenuml": "^0.2.2",
     "@opentiny/icons": "^0.1.4",
+    "@tombcato/smart-ticker": "^1.2.3",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vitepress-demo-preview/component": "^2.6.1",
@@ -173,7 +175,7 @@
     "markdown-it-collapsible": "^2.0.2",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-front-matter": "^0.2.4",
-    "markdown-it-github-alerts": "^1.0.0",
+    "markdown-it-github-alerts": "^1.0.1",
     "markdown-it-image-size": "^15.0.1",
     "markdown-it-mathjax3": "^5.2.0",
     "markdown-it-multimd-table-ext": "^4.2.35",
